--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -1,5 +1,6 @@
 // Styling for the features section
 section.features {
+     background: $light-blue;
     .section-heading {
         margin-bottom: 100px;
         h2 {
