--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,6 +5,8 @@
 $theme-primary:    #fdcc52;
 $theme-secondary:  #7b4397;
 $theme-tertiary:   #dc2430;
+$dark-blue: #0C2550;
+$light-blue: #68BBE1;
 
 $gray-base:        #000;
 $gray-darker:      lighten($gray-base, 13.5%); // #222
