--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -1,47 +1,52 @@
 // Styling for the masthead
 header.masthead {
     position: relative;
-
     width: 100%;
     padding-top: 150px;
     padding-bottom: 100px;
 
-    color: white;
-    background: url('../img/bg-pattern.png'), $theme-secondary;
-    background: url('../img/bg-pattern.png'), -webkit-linear-gradient(to left, $theme-secondary, $theme-tertiary);
-    background: url('../img/bg-pattern.png'), linear-gradient(to left, $theme-secondary, $theme-tertiary);
+    color: $dark-blue;
+    background: white;
     .header-content {
-        max-width: 500px;
         margin-bottom: 100px;
 
         text-align: center;
         h1 {
             font-size: 30px;
+            font-weight: 600;
         }
+        h2 {
+            font-weight: 400;
+            font-size: 26px;
+            margin-bottom: 0px;
+        }
+    }
+    .light-blue {
+        color: $light-blue;
     }
     .device-container {
         max-width: 325px;
         margin-right: auto;
         margin-left: auto;
-        .screen img {
-            border-radius: 3px;
+        bottom: 0;
+        position: absolute;
+        .bluebig img {
+                width: 100%;
         }
     }
     @media (min-width: 992px) {
-        height: 100vh;
-        min-height: 775px;
+        height: 60vh;
+        min-height: 530px;
         padding-top: 0;
         padding-bottom: 0;
         .header-content {
-            margin-bottom: 0;
-
             text-align: left;
             h1 {
                 font-size: 50px;
             }
         }
         .device-container {
-            max-width: 325px;
+            max-width: 100%;
         }
     }
 }
