--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -63,17 +63,17 @@
 }
 
 @mixin heading-font {
-    font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
+    font-family: 'Helvetica', 'Arial', 'sans-serif';
     font-weight: 200;
     letter-spacing: 1px;
 }
 
 @mixin body-font {
-    font-family: 'Muli', 'Helvetica', 'Arial', 'sans-serif';
+    font-family: 'Helvetica', 'Arial', 'sans-serif';
 }
 
 @mixin alt-font {
-    font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
-    letter-spacing: 2px;
-    text-transform: uppercase;
+    font-family: 'Calibri', 'Helvetica', 'Arial', 'sans-serif';
+    font-weight: bold;
+    letter-spacing: 0px;
 }
