--- a/css/new-age.css
+++ b/css/new-age.css
@@ -48,11 +48,11 @@ p {
 }
 
 section {
-  padding: 100px 0;
+  padding: 96px 0;
 }
 
 section h2 {
-  font-size: 50px;
+  font-size: 48px;
 }
 
 #mainNav {
@@ -78,7 +78,12 @@ section h2 {
   color: #fcbd20;
 }
 
+#mainNav .navbar-brand {
+  margin: 0 auto;
+}
+
 #mainNav .navbar-toggler {
+  display: none;
   font-size: 12px;
   padding: 8px 10px;
   color: #222222;
@@ -139,8 +144,7 @@ section h2 {
 header.masthead {
   position: relative;
   width: 100%;
-  padding-top: 150px;
-  padding-bottom: 100px;
+  padding-top: 60px;
   color: #0C2550;
   background: white;
 }
@@ -169,8 +173,6 @@ header.masthead .device-container {
   max-width: 325px;
   margin-right: auto;
   margin-left: auto;
-  bottom: 0;
-  position: absolute;
 }
 
 header.masthead .device-container .bluebig img {
@@ -192,6 +194,8 @@ header.masthead .device-container .bluebig img {
   }
   header.masthead .device-container {
     max-width: 100%;
+    bottom: 0;
+    position: absolute;
   }
 }
 
@@ -233,14 +237,26 @@ section.download .badges .badge-link img {
 
 section.features {
   background: #68BBE1;
+  padding-bottom: 0px !important;
 }
 
 section.features .section-heading {
-  margin-bottom: 100px;
+  margin-bottom: 128px;
 }
 
 section.features .section-heading h2 {
   margin-top: 0;
+  color: white;
+}
+
+section.features .section-heading strong {
+  font-weight: 600;
+}
+
+@media (min-width: 992px) {
+  section.features .section-heading h2 {
+    text-align: left;
+  }
 }
 
 section.features .section-heading p {
@@ -264,21 +280,51 @@ section.features .device-container {
 }
 
 section.features .feature-item {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 0px;
+  padding-bottom: 96px;
   text-align: center;
 }
 
 section.features .feature-item h3 {
-  font-size: 30px;
+  font-size: 22px;
+  letter-spacing: 0px;
+  color: white;
+  font-weight: 600;
+}
+
+section.features .feature-item p {
+  color: white;
+  font-size: 13px;
 }
 
 section.features .feature-item i {
   font-size: 80px;
   display: block;
   margin-bottom: 15px;
-  background: -webkit-linear-gradient(to left, #7b4397, #dc2430);
-  background: linear-gradient(to left, #7b4397, #dc2430);
+  background: white;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+section.features .fwhite {
+  background: white;
+  padding: 96px 0 0 0;
+}
+
+section.features .fwhite .section-heading h2 {
+  color: #0C2550;
+}
+
+section.features .fwhite .feature-item h3 {
+  color: #0C2550;
+}
+
+section.features .fwhite .feature-item p {
+  color: #0C2550;
+}
+
+section.features .fwhite .feature-item i {
+  background: #0C2550;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
