--- a/css/new-age.css
+++ b/css/new-age.css
@@ -201,12 +201,19 @@ header.masthead .device-container .bluebig img {
 
 section.download {
   position: relative;
-  padding: 150px 0;
+  padding: 226px 0;
+  background: #F5F5F5;
 }
 
 section.download h2 {
-  font-size: 50px;
+  font-size: 48px;
   margin-top: 0;
+  margin-bottom: 48px;
+  color: #0C2550;
+}
+
+section.download h2 strong {
+  font-weight: 600;
 }
 
 section.download .badges .badge-link {
@@ -218,10 +225,6 @@ section.download .badges .badge-link:last-child {
   margin-bottom: 0;
 }
 
-section.download .badges .badge-link img {
-  height: 60px;
-}
-
 @media (min-width: 768px) {
   section.download .badges .badge-link {
     display: inline-block;
@@ -231,7 +234,7 @@ section.download .badges .badge-link img {
 
 @media (min-width: 768px) {
   section.download h2 {
-    font-size: 70px;
+    font-size: 48px;
   }
 }
 
@@ -281,7 +284,7 @@ section.features .device-container {
 
 section.features .feature-item {
   padding-top: 0px;
-  padding-bottom: 96px;
+  padding-bottom: 146px;
   text-align: center;
 }
 
