--- a/scss/_download.scss
+++ b/scss/_download.scss
@@ -1,10 +1,16 @@
 // Styling for the download section
 section.download {
     position: relative;
-    padding: 150px 0;
+    padding: 226px 0;
+    background: #F5F5F5;
     h2 {
-        font-size: 50px;
+        font-size: 48px;
         margin-top: 0;
+        margin-bottom: 48px;
+        color: $dark-blue;
+        strong {
+            font-weight: 600;
+        }
     }
     .badges {
         .badge-link {
@@ -12,9 +18,6 @@ section.download {
             margin-bottom: 25px;
             &:last-child {
                 margin-bottom: 0;
-            }
-            img {
-                height: 60px;
             }
             @media(min-width: 768px) {
                 display: inline-block;
@@ -24,7 +27,7 @@ section.download {
     }
     @media(min-width: 768px) {
         h2 {
-            font-size: 70px;
+            font-size: 48px;
         }
     }
 }
