about section new

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,9 +1,8 @@
 // Styling for the footer
 footer {
     padding: 25px 0;
-    text-align: center;
-    color: fade-out(white, .7);
-    background-color: $gray-darker;
+    text-align: left;
+    background-color: white;
     p {
         font-size: 12px;
         margin: 0;
@@ -13,7 +12,6 @@ footer {
         li {
             a {
                 font-size: 12px;
-                color: fade-out(white, .7);
                 &:hover,
                 &:focus,
                 &:active,
