--- a/css/new-age.css
+++ b/css/new-age.css
@@ -2,6 +2,7 @@ html,
 body {
   width: 100%;
   height: 100%;
+  color: #0C2550;
 }
 
 body {
@@ -9,14 +10,7 @@ body {
 }
 
 a {
-  color: #fdcc52;
-  -webkit-transition: all .35s;
-  -moz-transition: all .35s;
-  transition: all .35s;
-}
-
-a:hover, a:focus {
-  color: #fcbd20;
+  color: #0C2550;
 }
 
 hr {
@@ -68,14 +62,14 @@ section h2 {
 }
 
 #mainNav .navbar-brand {
-  color: #fdcc52;
+  color: #0C2550;
   font-family: 'Helvetica', 'Arial', 'sans-serif';
   font-weight: 200;
   letter-spacing: 1px;
 }
 
 #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
-  color: #fcbd20;
+  color: #051024;
 }
 
 #mainNav .navbar-brand {
@@ -97,7 +91,7 @@ section h2 {
 }
 
 #mainNav .navbar-nav > li > a.active {
-  color: #fdcc52 !important;
+  color: #0C2550 !important;
   background-color: transparent;
 }
 
@@ -129,7 +123,7 @@ section h2 {
     color: #222222;
   }
   #mainNav.navbar-shrink .navbar-brand:hover, #mainNav.navbar-shrink .navbar-brand:focus {
-    color: #fdcc52;
+    color: #0C2550;
   }
   #mainNav.navbar-shrink .navbar-nav > li > a,
   #mainNav.navbar-shrink .navbar-nav > li > a:focus {
@@ -137,7 +131,7 @@ section h2 {
   }
   #mainNav.navbar-shrink .navbar-nav > li > a:hover,
   #mainNav.navbar-shrink .navbar-nav > li > a:focus:hover {
-    color: #fdcc52;
+    color: #0C2550;
   }
 }
 
@@ -373,60 +367,58 @@ section.cta .overlay {
 
 section.contact {
   text-align: center;
+  padding: 96px 0;
 }
 
 section.contact h2 {
-  margin-top: 0;
-  margin-bottom: 25px;
+  font-size: 48px;
+  margin-top: 0px;
+  margin-bottom: 24px;
+  font-weight: 600;
+  color: #0C2550;
 }
 
-section.contact h2 i {
-  color: #dd4b39;
+section.contact p {
+  font-size: 16px;
+  margin-bottom: 0px;
 }
 
-section.contact ul.list-social {
-  margin-bottom: 0;
+section.contact .people {
+  margin-top: 96px;
 }
 
-section.contact ul.list-social li a {
-  font-size: 40px;
-  line-height: 80px;
-  display: block;
-  width: 80px;
-  height: 80px;
-  color: white;
-  border-radius: 100%;
+section.contact .people img {
+  width: 100px;
 }
 
-section.contact ul.list-social li.social-twitter a {
-  background-color: #1da1f2;
+section.contact .people h3 {
+  font-weight: 600;
+  font-size: 24px;
+  margin-top: 24px;
 }
 
-section.contact ul.list-social li.social-twitter a:hover {
-  background-color: #0d95e8;
+section.contact .people a {
+  color: #0C2550;
 }
 
-section.contact ul.list-social li.social-facebook a {
-  background-color: #3b5998;
+section.contact .people a:hover {
+  color: #68BBE1;
 }
 
-section.contact ul.list-social li.social-facebook a:hover {
-  background-color: #344e86;
+section.contact .reach h3 {
+  font-weight: 600;
+  font-size: 24px;
+  margin-top: 96px;
 }
 
-section.contact ul.list-social li.social-google-plus a {
-  background-color: #dd4b39;
-}
-
-section.contact ul.list-social li.social-google-plus a:hover {
-  background-color: #d73925;
+section.contact .reach img {
+  width: 168px;
 }
 
 footer {
   padding: 25px 0;
-  text-align: center;
-  color: rgba(255, 255, 255, 0.3);
-  background-color: #222222;
+  text-align: left;
+  background-color: white;
 }
 
 footer p {
@@ -440,7 +432,6 @@ footer ul {
 
 footer ul li a {
   font-size: 12px;
-  color: rgba(255, 255, 255, 0.3);
 }
 
 footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li a.active {
@@ -448,13 +439,13 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 }
 
 .bg-primary {
-  background: #fdcc52;
-  background: -webkit-linear-gradient(#fdcc52, #fdc539);
-  background: linear-gradient(#fdcc52, #fdc539);
+  background: #0C2550;
+  background: -webkit-linear-gradient(#0C2550, #091b3a);
+  background: linear-gradient(#0C2550, #091b3a);
 }
 
 .text-primary {
-  color: #fdcc52;
+  color: #0C2550;
 }
 
 .no-gutter > [class*='col-'] {
@@ -470,8 +461,8 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 
 .btn-outline:hover, .btn-outline:focus, .btn-outline:active, .btn-outline.active {
   color: white;
-  border-color: #fdcc52;
-  background-color: #fdcc52;
+  border-color: #0C2550;
+  background-color: #0C2550;
 }
 
 .btn {
