--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,49 +1,43 @@
 // Styling for the download section
 section.contact {
     text-align: center;
+    padding: 96px 0;
     h2 {
-        margin-top: 0;
-        margin-bottom: 25px;
-        i {
-            color: $brand-google-plus;
+        font-size: 48px;
+        margin-top: 0px;
+        margin-bottom: 24px;
+        font-weight: 600;
+        color: $dark-blue;
+    }
+    p {
+        font-size: 16px;
+        margin-bottom: 0px;
+    }
+    .people {
+        margin-top: 96px;
+        img {
+            width: 100px;
+        }
+        h3 {
+            font-weight: 600;
+            font-size: 24px;
+            margin-top: 24px;
+        }
+        a {
+            color: $dark-blue;
+        }
+        a:hover {
+            color: $light-blue;
         }
     }
-    ul.list-social {
-        margin-bottom: 0;
-        li {
-            a {
-                font-size: 40px;
-                line-height: 80px;
-                display: block;
-                width: 80px;
-                height: 80px;
-                color: white;
-                border-radius: 100%;
-            }
-            &.social-twitter {
-                a {
-                    background-color: $brand-twitter;
-                    &:hover {
-                        background-color: darken($brand-twitter, 5%);
-                    }
-                }
-            }
-            &.social-facebook {
-                a {
-                    background-color: $brand-facebook;
-                    &:hover {
-                        background-color: darken($brand-facebook, 5%);
-                    }
-                }
-            }
-            &.social-google-plus {
-                a {
-                    background-color: $brand-google-plus;
-                    &:hover {
-                        background-color: darken($brand-google-plus, 5%);
-                    }
-                }
-            }
+    .reach {
+        h3 {
+            font-weight: 600;
+            font-size: 24px;
+            margin-top: 96px;
+        }
+        img {
+            width: 168px;
         }
     }
 }
