--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -3,6 +3,7 @@ html,
 body {
     width: 100%;
     height: 100%;
+    color: $dark-blue;
 }
 
 body {
@@ -11,11 +12,6 @@ body {
 
 a {
     color: $theme-primary;
-    @include transition-all;
-    &:hover,
-    &:focus {
-        color: darken($theme-primary, 10%);
-    }
 }
 
 hr {
