--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -39,5 +39,8 @@ section.contact {
         img {
             width: 168px;
         }
+        p {
+            margin-top: 8px;
+        }
     }
 }
