--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -54,6 +54,9 @@ section.features {
             -webkit-text-fill-color: transparent;
         }
     }
+    .feature-item.bottom {
+        padding-bottom: 60px;
+    }
     .fwhite {
         background: white;
         padding: 96px 0 0 0;
