--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -2,11 +2,39 @@
 section.features {
      background: $light-blue;
      padding-bottom: 0px !important;
+     button {
+        margin-bottom: 96px;
+        padding: 12px 60px !important;
+     }
+     button.btn-primary {
+        background: #CCDDF9;
+        border-color: #CCDDF9;
+        color: #2F5FB3;
+        &:hover {
+            background: #2F5FB3;
+            border-color: #2F5FB3;
+            color: #CCDDF9;
+        }
+     }
+     a {
+        text-decoration: none;
+        width: 100%;
+     }
+     .btn-link {
+        color: #fff;
+     }
+    @media(max-width: 992px) {
+        .section-heading {
+            margin: 0 auto;
+        }
+    }
     .section-heading {
-        margin-bottom: 128px;
+        margin-bottom: 46px;
         h2 {
             margin-top: 0;
             color: white;
+            padding-left: 16px;
+            padding-right: 16px;
         }
         strong {
             font-weight: 600;
@@ -22,8 +50,33 @@ section.features {
     }
     .device-container,
     .feature-item {
-        max-width: 325px;
-        margin: 0 auto;
+        @media(min-width: 992px) {
+            width: 100%;
+            transition: all 0.5s ease;
+            padding: 8px 16px;
+            &:hover {
+                background: rgba(0,0,0,.1);
+                border-radius: 8px;
+            }
+        }
+        @media(max-width: 992px) {
+            text-align: center;
+            i {
+                margin-bottom: 16px;
+                margin-top: 24px;
+            }
+        }
+        p {
+            margin: 0px;
+        }
+    }
+    @media(min-width: 992px) {
+        .fwhite{
+            .feature-item:hover {
+                background: rgba(0,0,0,.05);
+                border-radius: 8px;
+            }
+        }
     }
     .device-container {
         margin-bottom: 100px;
@@ -32,9 +85,7 @@ section.features {
         }
     }
     .feature-item {
-        padding-top: 0px;
-        padding-bottom: 146px;
-        text-align: center;
+        margin-bottom: 40px;
         h3 {
             font-size: 22px;
             letter-spacing: 0px;
@@ -46,12 +97,26 @@ section.features {
             font-size: 13px;
         }
         i {
-            font-size: 80px;
-            display: block;
-            margin-bottom: 15px;
             background: white;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            display: block;
+            font-size: 80px;
+        }
+        @media(min-width: 992px) {
+            i {
+            display: none;
+            }
+        }
+    }
+    .app-preview {
+        img {
+            width: 320px;
+        }
+    }
+    @media(max-width: 991px) {
+        .app-preview {
+            display: none;
         }
     }
     .feature-item.bottom {
