--- a/css/new-age.css
+++ b/css/new-age.css
@@ -274,7 +274,7 @@ section.features .section-heading {
 }
 
 section.features .section-heading h2 {
-  margin-top: 0;
+  margin-top: 0px;
   color: white;
   padding-left: 16px;
   padding-right: 16px;
