--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -31,7 +31,7 @@ section.features {
     .section-heading {
         margin-bottom: 46px;
         h2 {
-            margin-top: 0;
+            margin-top: 0px;
             color: white;
             padding-left: 16px;
             padding-right: 16px;
