--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -2,7 +2,9 @@
 header.masthead {
     position: relative;
     width: 100%;
-    padding-top: 60px;
+    @media (min-width: 992px) {
+        padding-top: 60px;
+    }
 
     color: $dark-blue;
     background: white;
@@ -19,6 +21,33 @@ header.masthead {
             font-size: 26px;
             margin-bottom: 0px;
         }
+    }
+     @media (max-width: 991px) {
+        .header-content {
+        margin-bottom: 40px;
+        }
+    }
+     @media (min-width: 992px) {
+        .cta li:first-child {
+            float: left;
+        }
+    }
+    @media (max-width: 991px) {
+        .cta li:first-child {
+        margin: 0 auto;
+        text-align: center;
+        float: auto;
+        } 
+        .cta li:first-child {
+        margin-bottom: 24px;
+        }
+        .cta li img{ 
+        width: 200px;
+        }
+    }
+    .cta li {
+        margin: 0 auto;
+        text-align: center;
     }
     .light-blue {
         color: $light-blue;
