--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -53,6 +53,7 @@ header.masthead {
         }
         .cta li img{ 
         width: 150px;
+        max-width: 100%;
         }
     }
     .light-blue {
