--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -85,3 +85,7 @@ header.masthead {
         }
     }
 }
+section.features .flightning button {
+    margin-bottom: 0px;
+    padding: 12px 60px !important;
+}
