--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -204,7 +204,7 @@ section.features {
 }
 .single-page {
     background: rgba(0,0,0, 0.1);
-    border-radius: 50%;
+    border-radius: 30px;
     a {
         padding: 32px 18px;
         line-height: 50px;
