--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -34,22 +34,23 @@ footer {
         }
     }
 }
+.fmenu a {
+    text-decoration: none;
+}
 .foot-menu{
-    background: #CCDDF9;
+    background: rgba(104,187,225,0.3);
     border-radius: 30px;
     padding: 4px 16px;
     font-size: 14px;
     color: #0C2550;
-    a {
-        color: #0C2550;
-        &:hover,
-        &:focus,
-        &:active,
-        &.active 
-        {
-            text-decoration: none;
-        }
-    }
+    display: inline-block;
+    margin-bottom: 8px;
+}
+.lightning .foot-menu{ 
+    color: #ffffff;
+}
+.foot-menu:hover{
+    background: rgba(104,187,225,0.6);
 }
 #mc_embed_signup2 {margin: 40px 0 96px 0;}
 #mc_embed_signup2 form {text-align:center; padding:10px 0 10px 0;}
