--- a/css/new-age.css
+++ b/css/new-age.css
@@ -165,7 +165,7 @@ header.masthead {
 }
 
 header.masthead .header-content {
-  margin-bottom: 100px;
+  margin-bottom: 20px;
   text-align: center;
 }
 
@@ -257,6 +257,23 @@ section.features .flightning button {
   padding: 12px 60px !important;
 }
 
+@media (max-width: 768px) {
+  .desktop {
+    display: none;
+  }
+}
+
+.desktop a {
+  padding: 16px 0px;
+  border-radius: 40px;
+  margin: 0 0;
+  display: inline-block;
+}
+
+.desktop a:hover {
+  text-decoration: underline;
+}
+
 section.download {
   position: relative;
   padding: 226px 0;
@@ -300,24 +317,6 @@ section.download .badges .badge-link:last-child {
   section.download h2 {
     font-size: 48px;
   }
-}
-
-@media (max-width: 768px) {
-  section.download .desktop {
-    display: none;
-  }
-}
-
-section.download .desktop a {
-  background: rgba(0, 0, 0, 0.1);
-  padding: 16px 24px;
-  border-radius: 40px;
-  margin: 60px 0 0 0;
-  display: inline-block;
-}
-
-section.download .desktop a:hover {
-  text-decoration: none;
 }
 
 section.features {
